--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     justify-content: center;
     gap: 20px;
     width: 400px;
-    height: 400px;
+    height: 400px auto;
     background-color: rgba(255, 255, 255, 0.4);
     padding: 20px;
     border-radius: 10px;
@@ -32,7 +32,11 @@ body {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 3.5rem;
+    font-family:'Bitcount Grid Double', sans-serif;
+    color: #000000;
+    text-align: center;
+    margin: 10px auto;
 }
 
 .buttons {
@@ -67,7 +71,7 @@ h1 {
 }
 
 p {
-    font-weight: bold;
+    font-size: 2rem;
 }
 
 .your-score span {
@@ -78,4 +82,13 @@ p {
 .machine-score span {
     font-size: 2rem;
     color: #f4f8;
+}
+
+.result {
+    font-size: 2rem;
+    font-weight: bold;
+    font-family:'Bitcount Grid Double', sans-serif;
+    color: #000000;
+    text-align: center;
+    margin: 20px auto;
 }
